Colaboratory を使用して作成しました

--- a/method2.ipynb
+++ b/method2.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "mount_file_id": "https://github.com/nenecchiCV/internal-competition-2024/blob/main/method1.ipynb",
-      "authorship_tag": "ABX9TyMO9u01UQ2DSsxWeaTS2kkg",
+      "authorship_tag": "ABX9TyNygbpe3nBsWDnFqs0TCEdX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,7 +272,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -297,7 +299,7 @@
         "id": "3-vYPlGg3kAB",
         "outputId": "16a77972-ad2a-4958-f8ee-1bed757e59fc"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,12 +318,12 @@
       "metadata": {
         "id": "zurfTCmEgwqf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "Hy9sI7w5Mg3k",
         "colab": {
@@ -374,7 +376,7 @@
       "metadata": {
         "id": "CeK-NL8tdmWi"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +410,7 @@
       "metadata": {
         "id": "9bxQcjEDgzz8"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +445,7 @@
       "metadata": {
         "id": "xFxsPwmM3oCz"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,7 +456,7 @@
         "\n",
         "class CFG:\n",
         "    seed = 99\n",
-        "    exp_name = 'exp_1'\n",
+        "    exp_name = 'exp_2'\n",
         "    comment = exp_name\n",
         "    model_name = 'LSTM-FC'\n",
         "    train_bs = 8\n",
@@ -464,13 +466,13 @@
         "    lr = 2e-4\n",
         "    scheduler = 'CosineAnnealingLR'\n",
         "    min_lr = 1e-6\n",
-        "    T_max = int(30000 / train_bs * epochs) + 50\n",
+        "    T_max = int(15000 / train_bs * epochs) + 50\n",
         "    T_0 = 25\n",
         "    warmup_epochs = 0\n",
         "    wd = 1e-6\n",
         "    n_fold = 5\n",
         "    folds = []\n",
-        "    device = \"cpu\"\n",
+        "    device = \"cuda\"\n",
         "    # device = xm.xla_device()\n",
         "    lstm_input_size=5\n",
         "    lstm_hidden_size=10\n",
@@ -481,7 +483,7 @@
       "metadata": {
         "id": "91xKiQmx88ad"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -538,7 +540,7 @@
       "metadata": {
         "id": "IEHjxyGTLrpq"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +553,7 @@
       "metadata": {
         "id": "aA-i_sAAMklM"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +584,7 @@
         },
         "outputId": "9ae602a9-7092-488e-d05b-a6c5a07fe13c"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +681,7 @@
       "metadata": {
         "id": "w70KIUNFKALD"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -752,7 +754,7 @@
       "metadata": {
         "id": "xUe04P51LcW3"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -782,7 +784,7 @@
       "metadata": {
         "id": "fz-5zRe-LDx-"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1191,7 +1193,25 @@
           "name": "stderr",
           "text": [
             "Train : 100%|██████████| 2000/2000 [00:24<00:00, 80.92it/s, gpu_mem=0.00 GB, lr=0.00020, train_loss=0.4422]\n",
-            "Valid :  68%|██████▊   | 342/500 [00:02<00:01, 117.50it/s, gpu_memory=0.00 GB, lr=0.00020, valid_loss=0.7883]"
+            "Valid : 100%|██████████| 500/500 [00:03<00:00, 131.72it/s, gpu_memory=0.00 GB, lr=0.00020, valid_loss=0.6439]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32mValid Score Improved (0.6520 ---> 0.6439)\n",
+            "Model Saved\u001b[0m\n",
+            "\n",
+            "\n",
+            "Epoch 12/200"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Train :  53%|█████▎    | 1054/2000 [00:13<00:12, 76.66it/s, gpu_mem=0.00 GB, lr=0.00020, train_loss=0.1712]"
           ]
         }
       ]
